--- a/TecnicoDevJr/TecnicoDevJr/Views/Home/Index.cshtml
+++ b/TecnicoDevJr/TecnicoDevJr/Views/Home/Index.cshtml
@@ -1,8 +1,62 @@
-﻿@{
+﻿@model IEnumerable<TecnicoDevJr.Models.Usuario>
+@{
     ViewData["Title"] = "Home Page";
+    Layout = "~/Views/Shared/_Layout.cshtml";
 }
 
-<div class="text-center">
-    <h1 class="display-4">Welcome</h1>
-    <p>Learn about <a href="https://docs.microsoft.com/aspnet/core">building Web apps with ASP.NET Core</a>.</p>
+
+<div class="container-fluid">
+    <div class="card shadow mb-4">
+        <div class="card-header py-3">
+            <h6 class="m-0 font-weight-bold text-primary">Listado de Usuarios</h6>
+        </div>
+        <div class="card-body">
+            @{
+                foreach (var item in Model)
+                {
+                        <div class="row">
+                            <div class="col-3">
+                                @Html.LabelFor(x => x.First().IdUsuario)
+                            </div>
+                            <div class="col-3">
+                                @item.IdUsuario
+                            </div>
+                            <div class="col-3">
+                                @Html.LabelFor(x => x.First().UserName)
+                            </div>
+                            <div class="col-3">
+                                @item.UserName
+                            </div>
+                            <div class="col-3">
+                                @Html.LabelFor(x => x.First().Nombre)
+                            </div>
+                            <div class="col-3">
+                                @item.Nombre
+                            </div>
+                            <div class="col-3">
+                                @Html.LabelFor(x => x.First().Email)
+                            </div>
+                            <div class="col-3">
+                                @item.Email
+                            </div>
+                            <div class="col-3">
+                                @Html.LabelFor(x => x.First().Telefono)
+                            </div>
+                            <div class="col-3">
+                                @item.Telefono
+                            </div>
+                        </div>
+                    <div class="row">
+                        <div class="col-1">
+                            <a href="@Url.Action("Delete","User",new {Id=item.IdUsuario})"><i class="fas fa-trash-alt" style="font-size: 18px;"></i></a>
+                        </div>
+                        <div class="col-1">
+                            <a href="@Url.Action("Edit","User",new {Id=item.IdUsuario})"><i class="fas fa-edit" style="font-size: 18px;"></i></a>
+                        </div>
+                    </div>
+                    <hr />
+                }
+            }
+        </div>
+    </div>
 </div>
