--- a/TecnicoDevJr/TecnicoDevJr/Views/Home/Index.cshtml
+++ b/TecnicoDevJr/TecnicoDevJr/Views/Home/Index.cshtml
@@ -4,59 +4,60 @@
     Layout = "~/Views/Shared/_Layout.cshtml";
 }
 
-
 <div class="container-fluid">
     <div class="card shadow mb-4">
         <div class="card-header py-3">
             <h6 class="m-0 font-weight-bold text-primary">Listado de Usuarios</h6>
         </div>
         <div class="card-body">
-            @{
-                foreach (var item in Model)
-                {
-                        <div class="row">
-                            <div class="col-3">
-                                @Html.LabelFor(x => x.First().IdUsuario)
-                            </div>
-                            <div class="col-3">
-                                @item.IdUsuario
-                            </div>
-                            <div class="col-3">
-                                @Html.LabelFor(x => x.First().UserName)
-                            </div>
-                            <div class="col-3">
-                                @item.UserName
-                            </div>
-                            <div class="col-3">
-                                @Html.LabelFor(x => x.First().Nombre)
-                            </div>
-                            <div class="col-3">
-                                @item.Nombre
-                            </div>
-                            <div class="col-3">
-                                @Html.LabelFor(x => x.First().Email)
-                            </div>
-                            <div class="col-3">
-                                @item.Email
-                            </div>
-                            <div class="col-3">
-                                @Html.LabelFor(x => x.First().Telefono)
-                            </div>
-                            <div class="col-3">
-                                @item.Telefono
-                            </div>
-                        </div>
-                    <div class="row">
-                        <div class="col-1">
-                            <a href="@Url.Action("Delete","User",new {Id=item.IdUsuario})"><i class="fas fa-trash-alt" style="font-size: 18px;"></i></a>
-                        </div>
-                        <div class="col-1">
-                            <a href="@Url.Action("Edit","User",new {Id=item.IdUsuario})"><i class="fas fa-edit" style="font-size: 18px;"></i></a>
-                        </div>
-                    </div>
-                    <hr />
-                }
-            }
+            <table class="table">
+                <thead>
+                    <tr>
+                        <th>
+                            @Html.DisplayNameFor(model => model.IdUsuario)
+                        </th>
+                        <th>
+                            @Html.DisplayNameFor(model => model.UserName)
+                        </th>
+                        <th>
+                            @Html.DisplayNameFor(model => model.Nombre)
+                        </th>
+                        <th>
+                            @Html.DisplayNameFor(model => model.Email)
+                        </th>
+                        <th>
+                            @Html.DisplayNameFor(model => model.Telefono)
+                        </th>
+                        <th></th>
+                    </tr>
+                </thead>
+                <tbody>
+                    @foreach (var item in Model)
+                    {
+                        <tr>
+                            <td>
+                                @Html.DisplayFor(modelItem => item.IdUsuario)
+                            </td>
+                            <td>
+                                @Html.DisplayFor(modelItem => item.UserName)
+                            </td>
+                            <td>
+                                @Html.DisplayFor(modelItem => item.Nombre)
+                            </td>
+                            <td>
+                                @Html.DisplayFor(modelItem => item.Email)
+                            </td>
+                            <td>
+                                @Html.DisplayFor(modelItem => item.Telefono)
+                            </td>
+                            <td>
+                                <a asp-action="CreateEdit" asp-route-id="@item.IdUsuario"><i class="fas fa-user-edit" style="font-size: 18px;"></i></a>
+                                <a asp-action="Delete" asp-route-id="@item.IdUsuario"><i class="fas fa-user-times btn-outline-danger" style="font-size: 18px;"></i></a>
+                            </td>
+                        </tr>
+                    }
+                </tbody>
+            </table>
         </div>
     </div>
 </div>
