--- a/TecnicoDevJr/TecnicoDevJr/Views/Shared/_Layout.cshtml
+++ b/TecnicoDevJr/TecnicoDevJr/Views/Shared/_Layout.cshtml
@@ -25,7 +25,7 @@
         <ul class="navbar-nav bg-gradient-primary sidebar sidebar-dark accordion" id="accordionSidebar">
             <div class="sidebar-brand d-flex align-items-center justify-content-center">
                 <div class="sidebar-brand-icon">
-                    <i class="fas fa-user-secret"></i>
+                    <i class="fas fa-user-tie"></i>
                 </div>
                 <div class="sidebar-brand-text mx-3">Dev Jr COA</div>
             </div>
@@ -38,7 +38,7 @@
             </li>
             <li class="nav-item">
                 <a class="nav-link" href="@Url.Action("Create","User")">
-                    <i class="fas fa-fw fa-plus-circle"></i>
+                    <i class="fas fa-fw fa-user-plus"></i>
                     <span>Crear nuevo Usuario</span>
                 </a>
             </li>
