Agregado funcionalidad delete al boton del listado

--- a/TecnicoDevJr/TecnicoDevJr/Views/Home/Index.cshtml
+++ b/TecnicoDevJr/TecnicoDevJr/Views/Home/Index.cshtml
@@ -52,7 +52,7 @@
                             </td>
                             <td>
                                 <a asp-action="CreateEdit" asp-route-id="@item.IdUsuario"><i class="fas fa-user-edit" style="font-size: 18px;"></i></a>
-                                <a asp-action="Delete" asp-route-id="@item.IdUsuario"><i class="fas fa-user-times btn-outline-danger" style="font-size: 18px;"></i></a>
+                                <a asp-action="Delete" asp-route-id="@item.IdUsuario"><i class="fas fa-user-times" style="color: red; font-size: 18px;"></i></a>
                             </td>
                         </tr>
                     }
