--- a/TecnicoDevJr/TecnicoDevJr/Views/Shared/_Layout.cshtml
+++ b/TecnicoDevJr/TecnicoDevJr/Views/Shared/_Layout.cshtml
@@ -37,7 +37,7 @@
                 </a>
             </li>
             <li class="nav-item">
-                <a class="nav-link" href="@Url.Action("Create","User")">
+                <a class="nav-link" href="@Url.Action("CreateEdit","User")">
                     <i class="fas fa-fw fa-user-plus"></i>
                     <span>Crear nuevo Usuario</span>
                 </a>
