--- a/TecnicoDevJr/TecnicoDevJr/Views/User/Edit.cshtml
+++ b/TecnicoDevJr/TecnicoDevJr/Views/User/Edit.cshtml
@@ -5,8 +5,9 @@
     Layout = "~/Views/Shared/_Layout.cshtml";
 }
 
-@using (Html.BeginForm("CreateEdit", "User", FormMethod.Post, new { enctype = "multipart/form-data" }))
+@using (Html.BeginForm("Edit", "User", FormMethod.Post, new { enctype = "multipart/form-data" }))
 {
+    @Html.HiddenFor(x => x.IdUsuario)
     <div class="container-fluid">
         <div class="card shadow mb-4">
             <div class="card-header py-3">
@@ -31,8 +32,9 @@
                 </div>
                 <div class="form-group col-12">
                     <label asp-for="Telefono" class="control-label"></label>
-                    <input asp-for="Telefono" class="form-control" />
+                    @Html.TextBoxFor(x => x.Telefono, new { @class ="form-control"})
                 </div>
+                <input type="submit" value="Guardar" class="btn btn-primary"/>
             </div>
         </div>
     </div>
