--- a/TecnicoDevJr/TecnicoDevJr/Views/User/Index.cshtml
+++ b/TecnicoDevJr/TecnicoDevJr/Views/User/Index.cshtml
@@ -51,7 +51,7 @@
                                 @Html.DisplayFor(modelItem => item.Telefono)
                             </td>
                             <td>
-                                <a asp-action="CreateEdit" asp-route-id="@item.IdUsuario"><i class="fas fa-user-edit" style="font-size: 18px;"></i></a>
+                                <a href="@Url.Action("Edit","User",new {id=item.IdUsuario})"><i class="fas fa-user-edit" style="font-size: 18px;"></i></a>
                                 <a asp-action="Delete" asp-route-id="@item.IdUsuario"><i class="fas fa-user-times" style="color: red; font-size: 18px;"></i></a>
                             </td>
                         </tr>
